adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,5 +9,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nemo libero quod, eveniet similique, quos aspernatur, expedita minus velit reprehenderit maxime aperiam. Unde illum at fugiat architecto nam necessitatibus blanditiis libero.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, magnam. Aliquam atque officia est aperiam sapiente reprehenderit hic et! Unde quae aliquam dignissimos dolorem blanditiis necessitatibus corporis commodi corrupti? Repellendus.</p>
 </body>
 </html>
